# mcp-server-attom

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ATTOM_API_COVERAGE.md  Dockerfile  README.md  RELEASE_WORKFLOW.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: release.yml  security.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/models/: __init__.py  area.py  common.py  community.py  poi.py  property.py  school.py
app/api/routes/: __init__.py  area.py  community.py  poi.py  property.py  school.py
app/core/: __init__.py  auth.py  config.py
docs/: CLIENT_INTEGRATION.md  attom-api.json
mcp_server/: __init__.py  client.py  config.py  models.py  server.py  tools.py
mcp_server/tools/: __init__.py  assessment_tools.py  event_tools.py  misc_tools.py  property_tools.py  sale_tools.py  school_tools.py  valuation_tools.py
scripts/: bump_version.py  increment_version.py  test_pypi_publishing.py
src/: server.py
src/tools/: area_tools.py  assessment_tools.py  community_tools.py  event_tools.py  misc_tools.py  poi_tools.py  property_tools.py  sale_tools.py  school_tools.py  utils.py  valuation_tools.py
tests/: __init__.py  conftest.py  test_mock_tools.py  test_new_tools.py  test_standalone_tools.py  test_tools.py  test_versioning.py  test_workflow.py
tests/test_api/: __init__.py  test_area.py  test_poi_community_school.py  test_property.py
