[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attom-api"
version = "0.0.2"
authors = [
    {name = "Nicholas Budzban", email = "nicholasbudzban@gmail.com"},
]
description = "MCP server for the ATTOM Real Estate API"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["attom", "real-estate", "mcp", "property", "api", "uvx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
dependencies = [
    "FastMCP>=0.4.0",
    "httpx",
    "pydantic>=2.0.0",
    "python-dotenv",
    "structlog",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "respx",
]

[project.urls]
"Homepage" = "https://github.com/nkbud/mcp-server-attom"
"Bug Tracker" = "https://github.com/nkbud/mcp-server-attom/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.uvx]
name = "attom-api"
version = "0.0.2"
entry-point = "src.server:mcp"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"